samples/_failures_safe/1760960780_ff98e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2901470b.c: In function ‘main’:
./samples/SAFE/__tmp_2901470b.c:147:5: error: ‘process’ undeclared (first use in this function)
  147 |     process
      |     ^~~~~~~
./samples/SAFE/__tmp_2901470b.c:147:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2901470b.c:147:12: error: expected ‘;’ at end of input
  147 |     process
      |            ^
      |            ;
./samples/SAFE/__tmp_2901470b.c:147:5: error: expected declaration or statement at end of input
  147 |     process
      |     ^~~~~~~
